# leos

./: .containerignore  .gitignore  ARCHITECTURE.md  Containerfile  ForgotPassUserName.php  README.md  ROADMAP.md  Side.php  Validator.php  ValidatorAttendance.php  compose.yaml  test-inventory.md
.github/workflows/: test.yml
api/v1/: index.php
assets/images/brands/: SMS LOGO.af
assets/js/pages/: colors_info.js  colors_success.js
brand/: SMS LOGO.af
bug-reports/: BUG-20260627-02-security.md  BUG-20260627-03.md
docs/: DEPLOYMENT.md  server-control.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  modules.ts  ribbon.config.ts  theme.css  theme.ts
frontend/src/api/: client.ts
frontend/src/components/: AttendanceKiosk.tsx  AttendanceScreen.tsx  BackupScreen.tsx  BoardEligibilityScreen.tsx  CertificateScreen.tsx  (+38 more)
functions/: AuthorizationFnc.php
modules/messaging/: Compose.php  Group.php  Inbox.php
modules/scheduling/: Courses.php
modules/students/: Student.php
podman/db-init/: 01-grant.sql
scripts/: prepare-build.mjs
server/: Cargo.toml
server/src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests/api/: academics.spec.ts  classes.spec.ts  clubs.spec.ts  communications.spec.ts  compliance-certs.spec.ts  documents.spec.ts  eligibility.spec.ts  enrollment.spec.ts  permissions.spec.ts  practical-exam.spec.ts  record-lock.spec.ts  sports.spec.ts  statutory.spec.ts  students.spec.ts
tests/db/: class-cascade.spec.ts
tests/helpers/: db.ts
(+26 files in other folders)
