[package]
name = "hcw-sms"
version = "0.1.0"
description = "HCW School Management System"
authors = ["HolagundiWorks"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Used by `cargo tauri build` for the production custom protocol.
custom-protocol = ["tauri/custom-protocol"]
