[package]
name = "leos"
version = "0.3.0"
description = "LEOS — Learning Environment Operating System"
authors = ["HolagundiWorks"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
leos-server = { path = "../server" }

[features]
# Used by `cargo tauri build` for the production custom protocol.
custom-protocol = ["tauri/custom-protocol"]
